--- a/public/style.css
+++ b/public/style.css
@@ -50,3 +50,43 @@
 .container .row .services .row {
     width: 50%;
 }
+.out {
+    display: flex;
+    justify-content: center;
+}
+.out .list {
+    margin: 5px 0px;
+}
+.out .list .card .card-body .title, .text {
+    display: flex;
+    justify-content: center;
+}
+.image-place {
+    min-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image-place img {
+    width: 50%;
+}
+.text-image {
+    min-height: 100px;
+    display: flex;
+    align-items: normal;
+    flex-direction: column;
+    justify-content: center;
+}
+.text-image h2 {
+    display: flex;
+    align-items: center;
+}
+.text-image p {
+    text-align: justify;
+    margin: 0 3px 0 0;
+}
+@media only screen and (max-width: 600px) {
+    .image-place img {
+        width: 100%;
+    }
+  }
